--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-
-# Configuration de la base de données
 spring.datasource.url=jdbc:postgresql://localhost:5432/cinema
-spring.datasource.username=USERNAME
-spring.datasource.password=PASSWORD 
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=harizo123
+logging.level.com.example.cinema=DEBUG
+
